# x-shell

./: .gitignore  CMakeLists.txt  README.md  commit.sh
.cache/clangd/index/: main.cpp.579A653EAC2B48C3.idx  utils.cpp.71E6AF8B267F9455.idx
src/: main.cpp  utils.cpp  utils.h
